--- a/index.html
+++ b/index.html
@@ -3,22 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>odin recipes</title>
   </head>
   <body>
-    <h1>odin recipes</h1>
-    <img
-      src="https://images.fineartamerica.com/images-medium-large-5/1950s-housewife-cooking-tasting-sauce-vintage-images.jpg"
-      alt="woman at the kitchen"
-      width="310px"
-      height="350px"
-    />
-    <p>welcome dear! what do you want to eat?</p>
-    <br />
-    <ul>
-      <li><a href="recipes/miso-soup.html">miso-soup</a></li>
-      <li><a href="recipes/onigiri.html">onigiri </a></li>
-      <li><a href="recipes/green-tea.html">green tea with ginger</a></li>
-    </ul>
+    <h1 id="header" class="center">odin recipes</h1>
+    <div class="container center">
+      <img
+        src="https://images.fineartamerica.com/images-medium-large-5/1950s-housewife-cooking-tasting-sauce-vintage-images.jpg"
+        alt="woman at the kitchen"
+        width="310px"
+        height="350px"
+      />
+      <p>welcome dear! what do you want to eat?</p>
+      <br />
+      <ul class="list">
+        <li><a href="recipes/miso-soup.html">miso-soup</a></li>
+        <li><a href="recipes/onigiri.html">onigiri </a></li>
+        <li><a href="recipes/green-tea.html">green tea with ginger</a></li>
+      </ul>
+    </div>
   </body>
 </html>
