add styles to recipes, add back button

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>odin recipes</title>
   </head>
   <body>
-    <div class="container center">
-      <h1 id="header" class="center">odin recipes</h1>
+    <div class="container">
+      <h1 id="header">odin recipes</h1>
       <img
         src="https://images.fineartamerica.com/images-medium-large-5/1950s-housewife-cooking-tasting-sauce-vintage-images.jpg"
         alt="woman at the kitchen"
