--- a/recipes/miso-soup.html
+++ b/recipes/miso-soup.html
@@ -3,59 +3,64 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles.css" />
+
     <title>miso-soup</title>
   </head>
   <body>
-    <h1>miso-soup</h1>
-    <img
-      src="https://cdn.apartmenttherapy.info/image/upload/f_jpg,q_auto:eco,c_fill,g_auto,w_1500,ar_1:1/k%2FPhoto%2FRecipes%2F2024-01-miso-soup%2Fmiso-soup-030"
-      width="350px"
-      height="350px"
-      alt="miso soup"
-    />
-    <h3>description</h3>
-    <p>
-      miso soup is the perfect savory start to any meal. It’s so deceptively
-      easy to make that there’s no reason you need to wait for a night at the
-      sushi bar; you can pull it off right at home! here dashi, a building block
-      in japanese cuisine, serves as the umami-rich broth in this miso soup.
-      while it’s not uncommon to see instant dashi powder (similar to bouillon
-      powder) in home kitchens, it doesn’t take much more time to make dashi
-      from scratch with a couple of ingredients.
-    </p>
-    <h2>ingredients</h2>
-    <ul>
-      <li>dried kombu</li>
-      <li>katsuobushi</li>
-      <li>miso paste</li>
-      <li>tofu</li>
-      <li>wakame</li>
-    </ul>
-    <h2>steps</h2>
-    <ol>
-      <li>
-        <strong>make the dashi. </strong>heat kombu and cold water in a saucepan
-        until just before bubbles start to release from the bottom of the
-        saucepan. don’t let the water come to a boil, or the kombu can get slimy
-        or bitter. turn off the heat and remove the kombu. save the kombu for
-        another use, or discard it. add the katsuobushi, and bring the dashi
-        back to a simmer. turn off the heat and let steep while you prepare the
-        other ingredients.
-      </li>
-      <li>
-        <strong>repare the garnishes. </strong>padd the dried wakame to a small
-        bowl and cover with cold water. thinly slice scallions. cut tofu into
-        1/2-inch cubes.
-      </li>
-      <li>
-        <strong>make the miso soup. </strong>strain the dashi and return to the
-        pot. bring back to a simmer, then turn off the heat. add the miso to the
-        strainer and place over the soup pot. push the miso through the strainer
-        and into the soup. discard any chunks left over in the strainer. strain
-        the wakame and add to the soup along with the wakame, scallions, and
-        tofu.
-      </li>
-    </ol>
-    <p><em>bon appétit</em></p>
+    <div class="container">
+      <h1 id="header">miso-soup</h1>
+      <p class="btn"><a href="../index.html">back</a></p>
+      <img
+        src="https://cdn.apartmenttherapy.info/image/upload/f_jpg,q_auto:eco,c_fill,g_auto,w_1500,ar_1:1/k%2FPhoto%2FRecipes%2F2024-01-miso-soup%2Fmiso-soup-030"
+        width="350px"
+        height="350px"
+        alt="miso soup"
+      />
+      <h3>description</h3>
+      <p>
+        miso soup is the perfect savory start to any meal. It’s so deceptively
+        easy to make that there’s no reason you need to wait for a night at the
+        sushi bar; you can pull it off right at home! here dashi, a building
+        block in japanese cuisine, serves as the umami-rich broth in this miso
+        soup. while it’s not uncommon to see instant dashi powder (similar to
+        bouillon powder) in home kitchens, it doesn’t take much more time to
+        make dashi from scratch with a couple of ingredients.
+      </p>
+      <h2>ingredients</h2>
+      <ul class="list">
+        <li>dried kombu</li>
+        <li>katsuobushi</li>
+        <li>miso paste</li>
+        <li>tofu</li>
+        <li>wakame</li>
+      </ul>
+      <h2>steps</h2>
+      <ol class="list">
+        <li>
+          <strong>make the dashi. </strong>heat kombu and cold water in a
+          saucepan until just before bubbles start to release from the bottom of
+          the saucepan. don’t let the water come to a boil, or the kombu can get
+          slimy or bitter. turn off the heat and remove the kombu. save the
+          kombu for another use, or discard it. add the katsuobushi, and bring
+          the dashi back to a simmer. turn off the heat and let steep while you
+          prepare the other ingredients.
+        </li>
+        <li>
+          <strong>repare the garnishes. </strong>padd the dried wakame to a
+          small bowl and cover with cold water. thinly slice scallions. cut tofu
+          into 1/2-inch cubes.
+        </li>
+        <li>
+          <strong>make the miso soup. </strong>strain the dashi and return to
+          the pot. bring back to a simmer, then turn off the heat. add the miso
+          to the strainer and place over the soup pot. push the miso through the
+          strainer and into the soup. discard any chunks left over in the
+          strainer. strain the wakame and add to the soup along with the wakame,
+          scallions, and tofu.
+        </li>
+      </ol>
+      <p><em>bon appétit</em></p>
+    </div>
   </body>
 </html>
